--- a/coursera/dino/requirements.txt
+++ b/coursera/dino/requirements.txt
@@ -1,31 +1,304 @@
-absl-py==0.7.1
-astor==0.7.1
-astroid==2.2.5
-atomicwrites==1.3.0
-attrs==19.1.0
-gast==0.2.2
-grpcio==1.19.0
-h5py==2.9.0
-isort==4.3.17
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
+alembic==0.9.5
+amqp==2.2.1
+aniso8601==1.2.1
+ansible==2.6.5
+apipkg==1.4
+apptools==4.4.0
+arandr==0.1.9
+artifacts==20190320
+asn1crypto==0.24.0
+astroid==1.5.3
+attrs==17.4.0
+Babel==2.3.4
+backports.functools-lru-cache==1.4
+backports.lzma==0.0.2
+backports.shutil-get-terminal-size==1.0.0
+backports.ssl-match-hostname==3.5.0.1
+bcrypt==3.1.3
+Beaker==1.5.4
+BeautifulSoup==3.2.1
+beautifulsoup4==4.6.0
+bencode.py==2.0.0
+billiard==3.5.0.3
+binplist==0.1.5
+biplist==1.0.3
+blinker==1.4
+Bottleneck==1.2.1
+bzr==2.7.0
+catkin-pkg==0.4.5
+celery==4.1.0
+ceph-detect-init==1.0.1
+ceph-disk==1.0.0
+ceph-volume==1.0.0
+cephfs==2.0.0
+certifi==2019.3.9
+cffi==1.10.0
+characteristic==14.3.0
+chardet==3.0.4
+Cheetah==2.4.4
+CherryPy==3.5.0
+click==6.7
+configobj==5.0.6
+configparser==3.5.0
+construct==2.5.2
+coverage==4.4.1
+cpopen==1.5
+cryptography==2.3
+cssselect==0.9.2
+cycler==0.10.0
+datasketch==1.2.5
+decorator==4.0.11
+dfdatetime==20190116
+dfvfs==20190128
+dfwinreg==20190329
+di==0.3
+Django==1.11.13
+docopt==0.6.2
+docutils==0.13.1
+dpkt==1.9.1
+dtfabric==20190120
+ecdsa==0.13
+efilter==1!1.5
+elasticsearch==6.3.1
+elasticsearch5==5.5.5
+empy==3.3.2
+enum==0.4.4
+enum34==1.1.6
+ethtool==0.13
+execnet==1.4.1
+extras==1.0.0
+Fabric==1.14.0
+fastcache==1.0.2
+file-magic==0.3.0
+Flask==0.12.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.0
+Flask-Migrate==2.1.1
+Flask-RESTful==0.3.6
+flask-restplus==0.10.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
+Flask-WTF==0.14.2
+flup==1.0.2
+funcsigs==1.0.2
+functools32==3.2.3.post2
+fuse-python==0.2.1
+future==0.16.0
+futures==3.2.0
+GDAL==2.1.4
+gmpy2==2.0.8
+gpg==1.10.0
+greenlet==0.4.14
+gssapi==1.3.0
+gunicorn==19.7.1
+hachoir-core==1.3.4
+hachoir-metadata==1.3.3
+hachoir-parser==1.3.5
+html2text==2016.9.19
+html5lib==0.999999999
+httplib2==0.10.3
+humanize==0.5.1
+idna==2.6
+iniparse==0.4
+ioprocess==1.0.2
+ipaddr==2.1.10
+ipaddress==1.0.22
+IPy==0.81
+ipython==5.5.0
+ipython-genutils==0.1.0
+iso8601==0.1.11
+isodate==0.5.4
+isort==4.2.15
+itsdangerous==0.24
+iwlib==1.2
+Jinja2==2.9.6
+jmespath==0.9.0
+json-diff==1.3.4
+jsonpointer==1.10
+jsonschema==2.6.0
+kitchen==1.2.4
+kombu==4.1.0
+langtable==0.0.38
 lazy-object-proxy==1.3.1
-Markdown==3.1
+libvirt-python==3.7.0
+line-profiler==1.0b3
+linecache2==1.0.0
+logutils==0.3.5
+ltc-scrypt==1.0
+lucene==4.9.0
+lxml==4.1.1
+lz4==2.1.2
+Mako==1.0.7
+MarkupSafe==1.0
+matplotlib==2.0.0
 mccabe==0.6.1
+mercurial==4.2.3
+mglob==0.4
+mistune==0.8.3
 mock==2.0.0
-more-itertools==7.0.0
-numpy==1.16.2
-pbr==5.1.3
-pluggy==0.9.0
-protobuf==3.7.1
-py==1.8.0
-pylint==2.3.1
-pytest==4.4.1
-six==1.12.0
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-termcolor==1.1.0
-typed-ast==1.3.1
-Werkzeug==0.15.2
-wrapt==1.11.1
+mpmath==1.0.0
+msgpack==0.5.6
+ndg-httpsclient==0.4.0
+neo4jrestclient==2.1.1
+neovim==0.2.6
+networkx==1.11
+nose==1.3.7
+nose-cover3==0.1.0
+numexpr==2.6.1
+numpy==1.13.3
+olefile==0.45.1
+ordered-set==2.0.0
+parameterized==0.6.1
+paramiko==2.3.3
+Paste==2.0.3
+PasteDeploy==1.5.2
+PasteScript==2.0.2
+path.py==5.2
+pathlib==1.0.1
+pbr==3.1.1
+pdb==0.1
+pdfshuffler==0.6.0
+pecan==1.1.2
+pefile==2019.4.18
+pexpect==4.3.0
+pickleshare==0.7.4
+PIL==1.1.7
+Pillow==4.3.0
+plaso==20190331
+ply==3.9
+pp==1.6.0
+prettytable==0.7.2
+prompt-toolkit==1.0.15
+protobuf==3.3.1
+psutil==5.4.3
+psycopg2==2.7.3
+pthreading==0.1.3
+ptyprocess==0.5.2
+pwquality==1.4.0
+py==1.4.34
+pyalsaaudio==0.8.2
+pyasn1==0.3.7
+pyasn1-modules==0.1.5
+PyAudio==0.2.9
+pycairo==1.15.3
+pycparser==2.18
+pycrypto==2.6.1
+pycryptopp==0.6.0.1206569328141510525648634803928199668821045408958
+pycups==1.9.72
+pycurl==7.43.0
+pycypher==0.5.9
+pydot==1.0.29
+pydotplus==2.0.2
+pyface==5.1.0
+pygame==1.9.3
+pyglet==1.2.4
+Pygments==2.2.0
+pygobject==3.26.1
+pygpgme==0.3
+PyJWT==1.6.4
+pykickstart==2.41
+pyliblzma==0.5.3
+pymongo==3.5.1
+PyNaCl==1.1.2
+pyOpenSSL==17.2.0
+pyparsing==2.4.0
+pyparted==3.11.0
+pyPdf==1.13
+PyPDF2==1.26.0
+pypoppler==0.12.2
+pyregfi==99.99.99.277
+pyserial==3.1.1
+PySocks==1.6.7
+pytest==3.2.3
+python-augeas==0.5.0
+python-baseconv==1.2.1
+python-dateutil==2.6.1
+python-dmidecode==3.12.2
+python-editor==1.0.3
+python-gnupg==0.3.8
+python-keyczar==0.71rc0
+python-meh==0.43
+python-mimeparse==1.6.0
+pytsk3==20190316
+pytz==2017.2
+pyxattr==0.5.3
+pyxdg==0.25
+PyYAML==3.12
+pyzmq==17.0.0
+rados==2.0.0
+rbd==2.0.0
+redis==2.10.6
+remoto==0.0.30
+reportlab==3.4.0
+repoze.lru==0.4
+requests==2.21.0
+rgw==2.0.0
+rope==0.11.0
+rosdep==0.11.4
+rosdistro==0.6.2
+rosinstall==0.7.7
+rosinstall-generator==0.1.14
+rospkg==1.1.0
+rpm==4.14.2.1
+rpy2==2.8.6
+sanlock-python==3.5.0
+scapy===unknown.version
+scdate==1.10.9
+scipy==1.0.0
+scour==0.35
+sepolicy==1.1
+service-identity==16.0.0
+setools==4.1.1
+simplegeneric==0.8.1
+simplejson==3.10.0
+singledispatch==3.4.0.3
+six==1.11.0
+Skype4Py==1.0.35
+Skyperious==3.5
+slip==0.6.4
+slip.dbus==0.6.4
+SQLAlchemy==1.1.13
+sqlite3dbm==0.1.4
+stapler==0.3.3
+stevedore==1.15.0
+subprocess32==3.2.6
+suds-jurko==0.7.dev0
+sympy==1.1.1
+systemd-python==234
+tables==3.3.0
+Tempita==0.5.1
+terminator==1.91
+testtools==2.3.0
+Theano==0.9.0
+timesketch==20180613
+traceback2==1.4.0
+traitlets==4.3.2
+traits==4.6.0.dev0
+traitsui==5.1.0
+trollius==2.2
+uniconvertor==2.0
+unittest2==1.1.0
+urlgrabber==3.10.1
+urllib3==1.24.1
+vcstools==0.1.39
+vine==1.1.4
+vinetto==0.6a0
+virtualenv==15.0.3
+virtualenv-clone==0.2.6
+waitress==1.0.2
+wcwidth==0.1.7
+webencodings==0.5.1
+WebOb==1.7.3
+WebTest==2.0.27
+Werkzeug==0.12.2
+wrapt==1.10.11
+wstool==0.1.17
+WTForms==2.1
+wxPython==3.0.2.0
+wxPython-common==3.0.2.0
+XlsxWriter==1.1.6
+yara-python==3.8.1
+yum-langpacks==0.4.5
+yum-metadata-parser==1.1.4
+zope.event==4.2.0
