--- a/Dockerfile.vscode
+++ b/Dockerfile.vscode
@@ -28,6 +28,8 @@ RUN code --install-extension ms-python.python
 RUN code --install-extension ms-vsliveshare.vsliveshare
 RUN code --install-extension VisualStudioExptTeam.vscodeintellicode
 
+RUN apt-get install -y --no-install-recommends espeak
+
 RUN mkdir -p /home/coder/.config/Code/User/
 RUN echo "{\n\
     "editor.wordWrap": "on", \n\
