--- a/Dockerfile.coder
+++ b/Dockerfile.coder
@@ -1,9 +1,10 @@
 FROM codercom/code-server
+ENV LC_ALL=C.UTF-8
 
-RUN code-server --install-extension ms-python.python
-
-RUN sudo apt-get install -y python3.6 python3-pip --no-install-recommends
-RUN sudo apt-get update && sudo apt-get install -y --no-install-recommends ffmpeg
+USER root
+RUN apt-get update && apt-get install -y python3.6 python3-pip --no-install-recommends
+RUN apt-get install -y --no-install-recommends ffmpeg espeak
+USER coder
 
 RUN pip3 install setuptools
 RUN pip3 install numpy==1.16.3
@@ -15,6 +16,7 @@ RUN pip3 install matplotlib==3.0.3
 RUN pip3 install pydub==0.23.1
 RUN pip3 install mypy==0.701
 
+RUN code-server --install-extension ms-python.python
 
 RUN echo $'{\n\
     "editor.wordWrap": "on", \n\
