--- a/Dockerfile.vscode
+++ b/Dockerfile.vscode
@@ -1,7 +1,8 @@
 FROM ubuntu:18.04
+ENV LC_ALL=C.UTF-8
 
 RUN apt-get update && apt-get install -y python3.6 python3-pip --no-install-recommends
-RUN apt-get install -y --no-install-recommends ffmpeg
+RUN apt-get install -y --no-install-recommends ffmpeg espeak
 
 RUN pip3 install setuptools
 RUN pip3 install numpy==1.16.3
@@ -17,7 +18,6 @@ RUN python3 -c "from urllib.request import urlretrieve; urlretrieve('https://go.
 RUN apt install -y --no-install-recommends /tmp/vscode.deb
 
 RUN apt-get install -y --no-install-recommends libxtst6 openssl net-tools git sudo vim curl wget
-ENV LC_ALL=C.UTF-8
 RUN adduser --gecos '' --disabled-password coder 
 RUN echo "coder ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/nopasswd 
 USER coder
@@ -28,7 +28,6 @@ RUN code --install-extension ms-python.python
 RUN code --install-extension ms-vsliveshare.vsliveshare
 RUN code --install-extension VisualStudioExptTeam.vscodeintellicode
 
-RUN apt-get install -y --no-install-recommends espeak
 
 RUN mkdir -p /home/coder/.config/Code/User/
 RUN echo "{\n\
