--- a/speech-experiments/cvs-001/Makefile
+++ b/speech-experiments/cvs-001/Makefile
@@ -5,4 +5,5 @@ all:
 	(time python3 main.py) 2>&1 | tee run.log
 
 clean:
-	sh -c 'rm -r *.h5 *.tboard history.png run.log'
+	sh -c 'rm -r cvs.h5 *.tboard history.png run.log' || echo
+	cp cv.h5 cvs.h5
