remove carriage return

--- a/carving-experiments/3-filetypes-003-samples-001/Makefile
+++ b/carving-experiments/3-filetypes-003-samples-001/Makefile
@@ -2,8 +2,7 @@
 SHELL:=/bin/bash
 
 all:
-	(time python3 main.py) 2>&1 | tee run.log
+	(time python3 main.py) 2>&1 | tee >(stdbuf -o 0 sed -e 's/.*\r//g' > run.log)
 
 clean:
-	sh -c 'rm -r cvs.h5 *.tboard history.png run.log' || echo
-	cp v.h5 cvs.h5
+	sh -c 'rm -r *.h5 *.tboard history.png run.log' || echo
