--- a/carving-experiments/3-filetypes-003-samples-002/Makefile
+++ b/carving-experiments/3-filetypes-003-samples-002/Makefile
@@ -1,8 +1,8 @@
 .PHONY: all clean
-SHELL := /bin/bash
+SHELL:=/bin/bash
 
 all:
-	time python3 main.py 2>&1 | tee run.log
+	(time python3 main.py) 2>&1 | tee >(stdbuf -o 0 sed -e 's/.*\r//g' > run.log)
 
 clean:
-	sh -c 'rm -r *.h5 *.tboard history.png run.log'
+	sh -c 'rm -r *.h5 *.tboard history.png run.log' || echo
